# ff7tk

.github/workflows/: build.yml
ff7tkQmlGallery/: CMakeLists.txt
ff7tkWidgetGallery/: CMakeLists.txt
src/data/: CMakeLists.txt  FF7Save.cpp  FF7Save.h  FF7SaveInfo.cpp  FF7SaveInfo.h  ff7tkAbout.h
src/utils/: GZIP.cpp  GZIP.h
translations/: ff7tk_de.ts  ff7tk_en.ts  ff7tk_es.ts  ff7tk_fr.ts  ff7tk_it.ts  ff7tk_ja.ts  ff7tk_pl.ts  ff7tk_re.ts
